Add search functionality to all dashboards and rebrand with new color theme
- Added real-time search bars to Customer, Admin, and Super Admin dashboards
- Search filters tables as user types (case-insensitive, multi-field search)
- Replaced purple/FedEx-inspired colors with professional maritime theme
- New color palette: Deep Ocean Blue (#1e3a5f), Coral Orange (#ff6b35), Teal Green (#00a896)
- Updated all components: landing page, dashboards, forms, buttons, badges
- Applied global Bootstrap color overrides for consistent branding
- Enhanced user experience with instant filtering and no-results messages